@@ -1,3 +1,6 @@
+2012-12-14 - 0.2.3 - Dominic Simm <simm@sub.uni-goettingen.de>
+	* Added GeocodeCommandController-action for scheduled geocode-addition for provinces
+
 2012-12-14 - 0.2.2 - Dominic Simm <simm@sub.uni-goettingen.de>
 	* Added getter-functions to province-model for local and global reachable distcentres
 	* Some style changes
